--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script> <!-- Add this line -->
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin-top: 50px; 
+            background-image: url('https://images5.alphacoders.com/136/1364835.png'); /* Your image URL */
+            background-size: cover; /* Make sure the image covers the entire screen */
+            background-position: center; /* Center the image */
+            background-attachment: fixed; /* Keep the image in place while scrolling */
+        }
         #countdown { font-size: 3em; margin: 20px; }
         #users-online { font-size: 1.5em; color: red; }
     </style>
@@ -53,26 +61,4 @@
         const userRef = db.ref("activeUsers");
         const userKey = userRef.push().key;
 
-        // Add a user to the active users list
-        userRef.child(userKey).set(true).then(() => {
-            console.log("User added to active users list!");
-        }).catch(error => {
-            console.error("Error adding user:", error);
-        });
-
-        // Remove the user when they disconnect
-        userRef.child(userKey).onDisconnect().remove().then(() => {
-            console.log("User will be removed on disconnect.");
-        }).catch(error => {
-            console.error("Error on disconnect:", error);
-        });
-
-        // Listen for active users changes
-        userRef.on("value", snapshot => {
-            const activeUsers = snapshot.numChildren();
-            console.log(`Active Users: ${activeUsers}`);  // Log to the console
-            document.getElementById("users-online").innerText = activeUsers;
-        });
-    </script>
-</body>
-</html>
+        // Add a user to the active users li
