--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             color: #1DB954; /* Spotify Green */
             font-size: 1em;
         }
-        #countdown { font-size: 2em; margin: 20px; }
+        #countdown { font-size: 3em; margin: 20px; color: red; }
     </style>
 </head>
 <body>
